--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         text-align: center;
       }
     </style>
-  </head>
-  <body>
-    <h1>BOOTSTRAP TASKS</h1>
+ 
+ 
+    <h2>BOOTSTRAP TASKS</h1>
     <table border="1px">
       <tr>
         <th>Task Name</th>
@@ -57,6 +57,51 @@
       <tr>
         <td>Task 6</td>
         <td><a href="BS-Task6.html" target="_blank">Task 6</a></td>
+      </tr>
+     
+    </table>
+
+    <h1>JAVA SCRIPT TASKS</h1>
+    <table border="1px">
+      <tr>
+        <th>Task Name</th>
+        <th>Task Link</th>
+      </tr>
+      <tr>
+        <td>Task 1</td>
+        <td><a href="JS-Task1.html" target="_blank">Task 1</a></td>
+      </tr>
+<tr>
+        <td>Task 2</td>
+        <td><a href="JS-Task2.html" target="_blank">Task 2</a></td>
+      </tr>
+
+      <tr>
+        <td>Task 3</td>
+        <td><a href="JS-Task3.html" target="_blank">Task 3</a></td>
+      </tr>
+
+      <tr>
+        <td>Task 4</td>
+        <td><a href="JS-Task4.html" target="_blank">Task 4</a></td>
+      </tr>
+
+      <tr>
+        <td>Task 5</td>
+        <td><a href="JS-Task5.html" target="_blank">Task 5</a></td>
+      </tr>
+
+      <tr>
+        <td>Task 6</td>
+        <td><a href="JS-Task6.html" target="_blank">Task 6</a></td>
+      </tr>
+      tr>
+        <td>Task 7</td>
+        <td><a href="JS-Task7.html" target="_blank">Task 7</a></td>
+      </tr>
+      tr>
+        <td>Task 8</td>
+        <td><a href="JS-Task8.html" target="_blank">Task 8</a></td>
       </tr>
      
     </table>
