--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
       h1 {
         text-align: center;
       }
+        h2 {
+        text-align: center;
+      }
     </style>
  
  
-    <h2>BOOTSTRAP TASKS</h1>
+    <h1>BOOTSTRAP     TASKS</h1>
     <table border="1px">
       <tr>
         <th>Task Name</th>
@@ -61,7 +64,7 @@
      
     </table>
 
-    <h1>JAVA SCRIPT TASKS</h1>
+    <h2>JAVA SCRIPT     TASKS</h2>
     <table border="1px">
       <tr>
         <th>Task Name</th>
@@ -95,11 +98,11 @@
         <td>Task 6</td>
         <td><a href="JS-Task6.html" target="_blank">Task 6</a></td>
       </tr>
-      tr>
+    
         <td>Task 7</td>
         <td><a href="JS-Task7.html" target="_blank">Task 7</a></td>
       </tr>
-      tr>
+   
         <td>Task 8</td>
         <td><a href="JS-Task8.html" target="_blank">Task 8</a></td>
       </tr>
